Refactor swagger structure
