# swagger.json
@@ -42,7 +42,8 @@
         }
     ],
     "consumes": [
-        "application/json"
+        "application/json",
+        "multipart/form-data"
     ],
     "produces": [
         "application/json"
@@ -288,7 +289,7 @@
                 "summary": "Updates the currently logged in Client",
                 "requestBody": {
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "$ref": "#/definitions/ClientUpdate"
                             }
@@ -390,7 +391,7 @@
                 "summary": "Registers new helper to the system",
                 "requestBody": {
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "$ref": "#/definitions/HelperRegistration"
                             }
@@ -462,7 +463,7 @@
                 "summary": "Updates the currently logged in Helper",
                 "requestBody": {
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "$ref": "#/definitions/HelperUpdate"
                             }
@@ -935,36 +936,58 @@
         "ClientUpdate": {
             "type": "object",
             "properties": {
+                "name": {
+                    "type": "object",
+                    "properties": {
+                        "firstName": {
+                            "type": "string"
+                        },
+                        "lastName": {
+                            "type": "string"
+                        }
+                    }
+                },
                 "email": {
                     "type": "string"
                 },
                 "mobile": {
                     "type": "string"
                 },
-                "nationality": {
+                "birthDate": {
                     "type": "string"
                 },
-                "picture": {
+                "gender": {
+                    "type": "string"
+                },
+                "profilePicture": {
                     "type": "string",
-                    "format": "byte"
+                    "format": "binary"
                 }
             }
         },
         "HelperUpdate": {
             "type": "object",
             "properties": {
+                "name": {
+                    "type": "object",
+                    "properties": {
+                        "firstName": {
+                            "type": "string"
+                        },
+                        "lastName": {
+                            "type": "string"
+                        }
+                    }
+                },
                 "email": {
                     "type": "string"
                 },
                 "mobile": {
                     "type": "string"
                 },
-                "nationality": {
-                    "type": "string"
-                },
-                "picture": {
+                "profilePicture": {
                     "type": "string",
-                    "format": "byte"
+                    "format": "binary"
                 },
                 "bankAccount": {
                     "type": "string"
@@ -1014,27 +1037,24 @@
                 "skills": {
                     "type": "string"
                 },
-                "categories": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "category": {
+                    "type": "string"
                 },
-                "picture": {
+                "profilePicture": {
                     "type": "string",
-                    "format": "byte"
+                    "format": "binary"
                 },
                 "frontID": {
                     "type": "string",
-                    "format": "byte"
+                    "format": "binary"
                 },
                 "backID": {
                     "type": "string",
-                    "format": "byte"
+                    "format": "binary"
                 },
                 "certificate": {
                     "type": "string",
-                    "format": "byte"
+                    "format": "binary"
                 }
             }
         },
@@ -1089,18 +1109,7 @@
                             }
                         },
                         "birthDate": {
-                            "type": "object",
-                            "properties": {
-                                "day": {
-                                    "type": "number"
-                                },
-                                "month": {
-                                    "type": "number"
-                                },
-                                "year": {
-                                    "type": "number"
-                                }
-                            }
+                            "type": "string"
                         },
                         "email": {
                             "type": "string"
@@ -1111,18 +1120,9 @@
                         "mobile": {
                             "type": "string"
                         },
-                        "nationality": {
-                            "type": "string"
-                        },
-                        "picture": {
+                        "profilePicture": {
                             "type": "string",
-                            "format": "byte"
-                        },
-                        "balance": {
-                            "type": "number"
-                        },
-                        "isApproved": {
-                            "type": "boolean"
+                            "format": "binary"
                         }
                     }
                 }
@@ -1146,18 +1146,7 @@
                             }
                         },
                         "birthDate": {
-                            "type": "object",
-                            "properties": {
-                                "day": {
-                                    "type": "number"
-                                },
-                                "month": {
-                                    "type": "number"
-                                },
-                                "year": {
-                                    "type": "number"
-                                }
-                            }
+                            "type": "string"
                         },
                         "email": {
                             "type": "string"
@@ -1168,19 +1157,12 @@
                         "mobile": {
                             "type": "string"
                         },
-                        "nationality": {
-                            "type": "string"
-                        },
-                        "picture": {
+                        "profilePicture": {
                             "type": "string",
-                            "format": "byte"
-                        },
-                        "balance": {
-                            "type": "number"
+                            "format": "binary"
                         },
                         "certificate": {
-                            "type": "string",
-                            "format": "byte"
+                            "type": "string"
                         },
                         "bankAccount": {
                             "type": "string"
@@ -1199,14 +1181,14 @@
                         "skills": {
                             "type": "string"
                         },
-                        "categories": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                        "category": {
+                            "type": "string"
                         },
                         "isActive": {
-                            "type": "boolean"
+                            "type": "string"
+                        },
+                        "balance":{
+                           "type":"string" 
                         }
                     }
                 }
